# QxOrm

./: CMakeLists.txt  QxOrm.pri  QxOrm.pro  meson.build  meson_options.txt
doc/doxygen/html/: _ix_boost_serialize_register_helper_8h.html  _ix_boost_serialize_register_helper_8h_source.html  _ix_class_8h.html  _ix_class_8h_source.html  _ix_collection_8h.html  _ix_collection_8h_source.html  _ix_dao___helper_8h.html  _ix_dao___helper_8h_source.html  _ix_data_member_8h.html  _ix_data_member_8h_source.html  _ix_data_member_x_8h.html  _ix_data_member_x_8h_source.html  _ix_factory_8h.html  _ix_factory_8h_source.html  _ix_function_8h.html  _ix_function_8h_source.html  _ix_model_8h.html  _ix_model_8h_source.html  _ix_parameter_8h.html  _ix_parameter_8h_source.html  _ix_persistable_8h.html  _ix_persistable_8h_source.html  _ix_repository_8h.html  _ix_repository_8h_source.html  _ix_service_8h.html  _ix_service_8h_source.html  _ix_singleton_8h.html  _ix_singleton_8h_source.html  _ix_sql_element_8h.html  _ix_sql_element_8h_source.html  _ix_sql_generator_8h.html  _ix_sql_generator_8h_source.html  _ix_sql_query_builder_8h.html  _ix_sql_query_builder_8h_source.html  _ix_sql_relation_8h.html  _ix_sql_relation_8h_source.html  _ix_type_info_8h.html  _ix_type_info_8h_source.html  _ix_validator_8h.html  _ix_validator_8h_source.html  (+2686 more)
doc/doxygen/html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_76.html  all_7e.html  classes_63.html  classes_71.html  defines_5f.html  defines_71.html  enumvalues_69.html  enumvalues_71.html  enumvalues_74.html  enumvalues_76.html  files_63.html  files_69.html  files_71.html  functions_5f.html  functions_61.html  functions_63.html  functions_64.html  functions_66.html  functions_67.html  functions_69.html  functions_6c.html  functions_6f.html  (+17 more)
doc/qxorm_en/: download.html  faq.html  link.html
doc/qxorm_fr/: download.html  faq.html  link.html
include/: QxOrm.h
include/QxCollection/: QxCollection.h
include/QxCommon/: QxAnyCastDynamic.h  QxBool.h  QxConfig.h  QxHashValue.h  QxMacro.h  QxPropertyBag.h
include/QxDao/: IxSqlQueryBuilder.h  IxSqlRelation.h  QxDao.h  QxSqlDatabase.h  QxSqlQuery.h  QxSqlQueryBuilder.h  QxSqlRelationParams.h  QxSqlRelation_ManyToMany.h  QxSqlRelation_ManyToOne.h  QxSqlRelation_OneToMany.h  QxSqlRelation_OneToOne.h
include/QxDataMember/: IxDataMember.h  IxDataMemberX.h  QxDataMember.h  QxDataMemberX.h
include/QxFactory/: QxFactory.h
include/QxFunction/: QxFunction_0.h  QxFunction_1.h  QxFunction_2.h  QxFunction_3.h  QxFunction_4.h  QxFunction_5.h  QxFunction_6.h  QxFunction_7.h  QxFunction_8.h  QxFunction_9.h
include/QxRegister/: IxClass.h  QxClass.h
include/QxSerialize/Qt/: QxSerialize_QLinkedList.h  QxSerialize_QMatrix.h  QxSerialize_QRegExp.h  QxSerialize_QVector.h
include/QxTraits/: construct_ptr.h  generic_container.h  get_class_name.h  get_class_name_primitive.h  get_sql_type.h  is_container.h  is_container_base_of.h  is_container_to_pod.h  is_qt_linked_list.h  is_qt_variant_compatible.h
inl/QxCollection/: QxCollection.inl
inl/QxDao/: QxDao_Count.inl  QxDao_DeleteAll.inl  QxDao_DeleteById.inl  QxDao_Exist.inl  QxDao_FetchAll.inl  QxDao_FetchAll_WithRelation.inl  QxDao_FetchById.inl  QxDao_FetchById_WithRelation.inl  QxDao_Helper.inl  QxDao_Helper_Container.inl  QxDao_Insert.inl  QxDao_Insert_WithRelation.inl  QxDao_Save.inl  QxDao_Save_WithRelation.inl  QxDao_Update.inl  QxDao_Update_WithRelation.inl
inl/QxDataMember/: QxDataMemberX.inl
inl/QxRegister/: QxClass.inl
lib/: libQxOrm.so.1.4.4
src/QxCollection/: QxCollection.cpp
src/QxDao/: IxSqlQueryBuilder.cpp  IxSqlRelation.cpp  QxSqlDatabase.cpp  QxSqlQuery.cpp
src/QxDataMember/: IxDataMember.cpp  IxDataMemberX.cpp
src/QxRegister/: IxClass.cpp  QxClassX.cpp
src/QxSerialize/Qt/: QxSerialize_QMatrix.cpp  QxSerialize_QRegExp.cpp  QxSerialize_QVariant.cpp
src/QxSingleton/: QxSingletonX.cpp
test/: meson.build
test/qxBlog/src/: main.cpp
tools/: clean_all.bat
