option('qt_gui', type : 'boolean', value : false, description : 'If you want to serialize Qt GUI objects (QBrush, QColor, QFont, QImage, QMatrix, QPicture, QPixmap, QRegion)')
option('qt_network', type : 'boolean', value : false, description : 'Enables QxService module (network transactions to transfer your persistent layer)')

